# estimador-cag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
app/: config.py  dependencies.py  main.py  schemas.py
app/cache/: semantic.py
app/context/: examples.py
app/fixtures/: long_transcription.txt  short_transcription.txt
app/guardrails/: input.py  output.py
app/prompts/: __init__.py  loader.py
app/prompts/v1/: examples.j2  json_output.j2  system.j2  user.j2
app/routers/: estimations.py
app/schema/: __init__.py  estimations.py
app/services/: cache.py  estimation_parser.py  llm_service.py  llm_wrapper.py
tests/: conftest.py  test_cache.py  test_cache_semantic.py  test_estimate_endpoint.py  test_estimation_parser.py  test_examples_context.py  test_guardrails_input.py  test_guardrails_output.py  test_health.py  test_llm_wrapper.py
tests/prompts/: test_estimation_v1.py
