[project]
name = "estimator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "litellm>=1.55.0",
    "redis>=5.0.0",
    "anthropic",
    "openai",
    "python-dotenv",
    "streamlit>=1.28.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
