[project]
name = "estimator"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "fastapi",
    "structlog>=24.0",
    "uvicorn[standard]",
    "pydantic-settings",
    "litellm>=1.55.0",
    "redis>=5.0.0",
    "redisvl>=0.3",
    "numpy>=1.24",
    "anthropic",
    "openai",
    "python-dotenv",
    "streamlit>=1.28.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.20",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
